fix weekday labels: 3/21 is Saturday not Friday

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
             <h2>🏁 比賽目標</h2>
             <div class="race-grid">
                 <div class="race-card">
-                    <div class="date">2026 年 3 月 21 日（五）</div>
+                    <div class="date">2026 年 3 月 21 日（六）</div>
                     <div class="race-name">5K 馬拉松</div>
                     <div class="race-stats">
                         <div class="race-stat">
