--- a/index.html
+++ b/index.html
@@ -748,12 +748,12 @@
         <div class="stats-grid">
             <div class="stat-card">
                 <div class="icon">🏃</div>
-                <div class="value">21</div>
+                <div class="value">22</div>
                 <div class="label">總跑步次數</div>
             </div>
             <div class="stat-card">
                 <div class="icon">📏</div>
-                <div class="value">82.78 km</div>
+                <div class="value">86.83 km</div>
                 <div class="label">累積里程</div>
             </div>
             <div class="stat-card">
@@ -777,12 +777,12 @@
         <div class="progress-section">
             <h2>📊 2 月進度</h2>
             <div class="progress-bar-container">
-                <div class="progress-bar" style="width: 39%;">39%</div>
+                <div class="progress-bar" style="width: 53%;">53%</div>
             </div>
             <div class="progress-stats">
                 <span>目標：60 km / 月</span>
-                <span>已完成：23.37 km</span>
-                <span>剩餘：36.63 km</span>
+                <span>已完成：31.50 km</span>
+                <span>剩餘：28.50 km</span>
             </div>
         </div>
 
@@ -1500,18 +1500,18 @@
 
     <script>
         // 數據
-        const dates = ['01/04', '01/07', '01/12', '01/13', '01/14', '01/15', '01/19', '01/20', '01/21', '01/22', '01/24', '01/26', '01/27', '01/28', '01/30', '02/02', '02/03', '02/08', '02/20', '02/22', '02/23'];
-        const distances = [3.97, 1.46, 1.81, 3.20, 3.23, 3.42, 3.39, 3.61, 3.39, 3.43, 3.86, 4.10, 5.07, 5.12, 6.23, 6.03, 4.11, 6.11, 4.09, 3.03, 4.08];
-        const paces = [10.76, 11.14, 12.30, 10.76, 9.98, 9.46, 8.86, 8.63, 9.33, 8.76, 8.26, 7.54, 7.37, 6.87, 8.82, 7.18, 8.58, 7.93, 9.67, 8.60, 8.85];
-        const avgHr = [133, 100, 127, 125, 132, 133, 137, 135, 137, 144, 150, 153, 156, 164, 151, 161, 139, 148, 137, 139, 139];
-        const maxHr = [163, 128, 152, 155, 159, 157, 162, 159, 162, 167, 172, 175, 170, 174, 163, 168, 146, 157, 156, 148, 151];
+        const dates = ['01/04', '01/07', '01/12', '01/13', '01/14', '01/15', '01/19', '01/20', '01/21', '01/22', '01/24', '01/26', '01/27', '01/28', '01/30', '02/02', '02/03', '02/08', '02/20', '02/22', '02/23', '02/25'];
+        const distances = [3.97, 1.46, 1.81, 3.20, 3.23, 3.42, 3.39, 3.61, 3.39, 3.43, 3.86, 4.10, 5.07, 5.12, 6.23, 6.03, 4.11, 6.11, 4.09, 3.03, 4.08, 4.05];
+        const paces = [10.76, 11.14, 12.30, 10.76, 9.98, 9.46, 8.86, 8.63, 9.33, 8.76, 8.26, 7.54, 7.37, 6.87, 8.82, 7.18, 8.58, 7.93, 9.67, 8.60, 8.85, 8.80];
+        const avgHr = [133, 100, 127, 125, 132, 133, 137, 135, 137, 144, 150, 153, 156, 164, 151, 161, 139, 148, 137, 139, 139, 141];
+        const maxHr = [163, 128, 152, 155, 159, 157, 162, 159, 162, 167, 172, 175, 170, 174, 163, 168, 146, 157, 156, 148, 151, 154];
 
         // 跑步力學數據 (近期有記錄的)
-        const mechanicsDates = ['01/04', '01/12', '01/13', '01/14', '01/15', '01/19', '01/20', '01/21', '01/22', '01/24', '01/26', '01/27', '01/28', '01/30', '02/02', '02/03', '02/08', '02/20', '02/22', '02/23'];
-        const cadence = [127, 111, 119, 123, 129, 127, 128, 147, 149, 151, 159, 162, 163, 140, 164, 162, 165, 148, 153, 160];           // 步頻 spm
-        const verticalOsc = [10.0, 10.2, 10.1, 9.8, 9.5, 9.4, 9.5, 9.5, 9.5, 9.7, 9.7, 9.6, 9.7, 9.8, 9.3, 9.8, 9.5, 10.0, 10.1, 10.0];   // 垂直振幅 cm
-        const groundContact = [295, 320, 284, 267, 253, 232, 243, 294, 304, 299, 276, 265, 251, 278, 273, 311, 290, 297, 300, 316];    // 觸地時間 ms
-        const strideLength = [0.7, 0.7, 0.8, 0.8, 0.8, 0.9, 0.9, 0.8, 0.7, 0.8, 0.8, 0.8, 0.8, 0.8, 0.8, 0.7, 0.7, 0.8, 0.8, 0.7];     // 步幅長度 m
+        const mechanicsDates = ['01/04', '01/12', '01/13', '01/14', '01/15', '01/19', '01/20', '01/21', '01/22', '01/24', '01/26', '01/27', '01/28', '01/30', '02/02', '02/03', '02/08', '02/20', '02/22', '02/23', '02/25'];
+        const cadence = [127, 111, 119, 123, 129, 127, 128, 147, 149, 151, 159, 162, 163, 140, 164, 162, 165, 148, 153, 160, 159];           // 步頻 spm
+        const verticalOsc = [10.0, 10.2, 10.1, 9.8, 9.5, 9.4, 9.5, 9.5, 9.5, 9.7, 9.7, 9.6, 9.7, 9.8, 9.3, 9.8, 9.5, 10.0, 10.1, 10.0, 9.9];   // 垂直振幅 cm
+        const groundContact = [295, 320, 284, 267, 253, 232, 243, 294, 304, 299, 276, 265, 251, 278, 273, 311, 290, 297, 300, 316, 309];    // 觸地時間 ms
+        const strideLength = [0.7, 0.7, 0.8, 0.8, 0.8, 0.9, 0.9, 0.8, 0.7, 0.8, 0.8, 0.8, 0.8, 0.8, 0.8, 0.7, 0.7, 0.8, 0.8, 0.7, 0.7];     // 步幅長度 m
 
         // 累積距離
         let cumulative = [];
@@ -1657,7 +1657,7 @@
 
         // 進度條動畫
         setTimeout(() => {
-            document.querySelector('.progress-bar').style.width = '39%';
+            document.querySelector('.progress-bar').style.width = '53%';
         }, 500);
 
         // 比賽倒數計時
